<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#f2f2f2">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/add_room_edit_address"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:hint="@string/message_room_hint"
        android:layout_weight="1"
        android:layout_marginTop="8dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:layout_marginBottom="8dp">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_boy"
                android:id="@+id/add_room_boy_button"
                android:checked="true"
                android:textColor="@color/hint_grey"
                android:layout_marginRight="50dp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_girl"
                android:id="@+id/add_room_girl_button"
                android:checked="false"
                android:textColor="@color/hint_grey" />
        </RadioGroup>
        </LinearLayout>

</LinearLayout>