<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="edu.wust.lynn.classcontacts.edit.EditCourseActivity"
    android:background="@color/grey">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp">

        <ImageView
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:id="@+id/edit_course_photo"
            android:src="@drawable/course_photo"
            android:layout_marginRight="16dp"
            android:onClick="choosePhoto" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_course_id"
                android:hint="@string/edit_id"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_course_course_name"
                android:layout_gravity="center_horizontal"
                android:hint="@string/edit_course_name"
                android:layout_weight="1" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/edit_course_teacher_name"
                android:layout_gravity="center_horizontal"
                android:hint="@string/edit_teacher_name"
                android:layout_weight="1" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/edit_course_phone"
                android:layout_gravity="center_horizontal"
                android:hint="@string/edit_phone"
                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@android:id/list"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp" />

</LinearLayout>
