<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/show_course_statistics_time"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/text_normal"
        android:id="@+id/textView2"
        android:layout_below="@+id/show_course_statistics_time"
        android:layout_alignLeft="@+id/show_course_statistics_time"
        android:layout_alignStart="@+id/show_course_statistics_time"
        android:layout_marginBottom="4dp" />

    <TextView
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Small Text"
        android:id="@+id/show_course_statistics_normal"
        android:layout_alignBottom="@+id/textView2"
        android:layout_toRightOf="@+id/textView2"
        android:layout_toEndOf="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/text_leave"
        android:id="@+id/textView3"
        android:layout_alignBottom="@+id/show_course_statistics_normal"
        android:layout_toRightOf="@+id/show_course_statistics_normal"
        android:layout_toEndOf="@+id/show_course_statistics_normal" />

    <TextView
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Small Text"
        android:id="@+id/show_course_statistics_leave"
        android:layout_alignBottom="@+id/textView3"
        android:layout_toRightOf="@+id/textView3"
        android:layout_toEndOf="@+id/textView3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/text_absent"
        android:id="@+id/textView4"
        android:layout_alignBottom="@+id/show_course_statistics_leave"
        android:layout_toRightOf="@+id/show_course_statistics_leave"
        android:layout_toEndOf="@+id/show_course_statistics_leave" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Small Text"
        android:id="@+id/show_course_statistics_absent"
        android:layout_alignBottom="@+id/textView4"
        android:layout_toRightOf="@+id/textView4"
        android:layout_toEndOf="@+id/textView4" />
</RelativeLayout>