<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="16dp"
            android:id="@+id/linearLayout">

            <ImageView
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:id="@+id/edit_photo"
                android:src="@drawable/contact_photo"
                android:layout_marginRight="16dp"
                android:onClick="choosePhoto"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/edit_name"
                    android:hint="@string/edit_name"
                    android:layout_weight="1"
                    android:layout_gravity="center_horizontal" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/edit_id"
                    android:hint="@string/edit_id"
                    android:layout_weight="1" />

                <RelativeLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="center"
                        android:id="@+id/edit_gender"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true">

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/edit_boy"
                            android:id="@+id/boy_button"
                            android:checked="true"
                            android:layout_marginRight="16dp"
                            android:onClick="onRadioButtonClicked"
                            android:textColor="@color/hint_grey" />

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/edit_girl"
                            android:id="@+id/girl_button"
                            android:checked="false"
                            android:onClick="onRadioButtonClicked"
                            android:textColor="@color/hint_grey" />
                    </RadioGroup>
                </RelativeLayout>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="70dp"
            android:layout_below="@+id/linearLayout"
            android:layout_alignLeft="@+id/linearLayout"
            android:layout_alignStart="@+id/linearLayout"
            android:layout_alignRight="@+id/linearLayout"
            android:layout_alignEnd="@+id/linearLayout"
            android:background="@color/white"
            android:layout_marginBottom="8dp"
            android:id="@+id/linearLayout2">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView3"
                android:src="@drawable/ic_action_phone"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="8dp" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/edit_phone"
                android:layout_marginTop="20dp"
                android:hint="@string/edit_phone"
                android:layout_weight="7" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="3" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="70dp"
            android:layout_alignLeft="@+id/linearLayout2"
            android:layout_alignStart="@+id/linearLayout2"
            android:layout_below="@+id/linearLayout2"
            android:layout_alignRight="@+id/linearLayout2"
            android:layout_alignEnd="@+id/linearLayout2"
            android:layout_marginBottom="8dp"
            android:background="@color/white"
            android:id="@+id/RelativeLayout3">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/edit_course_photo"
                android:src="@drawable/ic_action_group"
                android:layout_gravity="center_vertical"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="8dp" />

            <RelativeLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7">

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_room"
                    android:spinnerMode="dialog"
                    android:prompt="@string/edit_room"
                    android:layout_centerVertical="true" />
            </RelativeLayout>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_new"
                android:onClick="addRoom"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:id="@+id/imageView"
                android:layout_weight="3"
                android:layout_gravity="center_vertical" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/RelativeLayout3"
            android:layout_alignStart="@+id/RelativeLayout3"
            android:layout_below="@+id/RelativeLayout3"
            android:layout_alignRight="@+id/RelativeLayout3"
            android:layout_alignEnd="@+id/RelativeLayout3"
            android:layout_marginBottom="8dp"
            android:background="@color/white"
            android:weightSum="1"
            android:minHeight="70dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/show_dormitory_three"
                android:src="@drawable/ic_action_edit"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="8dp"
                android:layout_gravity="center_vertical" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="70dp">

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:id="@+id/edit_notes"
                    android:hint="@string/edit_note"
                    android:layout_weight="7"
                    android:layout_marginTop="20dp" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:layout_weight="3" />
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
</ScrollView>
